Velcro test First SandBox/src/objects/Vendor_Account__c.object
<CustomObject>
    <description>Vendor working with the Vendor Account</description>
    <fields>
        <fullName>Affiliate_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Affiliate_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Affiliate_Account__c</fullName>
        <label>Opportunity Affiliate Account</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Affiliate_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted Pricing</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Final Vendor</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vendor Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Affiliate Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>